manifest/foo-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: foo-controller
  labels:
    app: foo-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-controller
  template:
    metadata:
      labels:
        app: foo-controller
    spec:
      serviceAccountName: foo-controller
      containers:
      - name: foo-controller
        image: localhost:5001/demo/foo-controller:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
