manifest/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: helloworld
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: localhost:5001/helloworld:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
