manifest/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  namespace: default
  name: helloworld
spec:
  selector:
    app: helloworld
  ports:
  - name: main
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
